app/assets/stylesheets/header.scss
@import 'colors';
@import 'fonts';

.header {
    align-items: center;
    background-color: $primary;
    display: flex;
    flex-direction: column;
    height: 120px;
    justify-content: space-between;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: 10;
    .beta {
        width: 100%;
        height: 1.5rem;
        background-color: #607989;
        color: white;
        margin: 0;
        text-align: center;
        box-sizing: border-box;
        font-size: 1rem;
        line-height: 1.5rem; 
        font-weight: bold;
    }
}

.logo {
    img {
        max-height: 32px;
    }
}

.navigation {
    display: block;
}
.nav {
    display: flex;
    justify-content: center;
    li {
        margin: 6px;
        text-transform: uppercase;
        letter-spacing: 2px;
        text-align: center;
        padding: 3px 0;
    }
    .active {
        border-bottom: 3px solid $text;
    }
}

.hamburger {
    display: none;
}

@media screen and (max-width: 728px) {
    .header {
        height: 70px;
        flex-direction: row;
        flex-wrap: wrap;
        align-items: flex-start;
    }

    .logo {
        img {
            max-height: 24px;
            padding: 0 20px;
        }
    }

    #nav {
        display: none;
        height: 100vh;
        width: 100vw;
        max-height: 100vh;
        background-color: #f5d327;
        flex-direction: column;
        padding: 70px 12px;
        color: $text;
        position: absolute;
        top: 0;
        left: 0;
        z-index: 5;
        .nav {
            flex-direction: column;
        }
        .active {
            border-bottom: none;
        }
    }

    .hamburger {
        display: inline-block;
        font-size: 24px;
        padding: 0 20px;
        cursor: pointer;
        z-index: 10;
        #cross {
            display: none;
        }
    }
}

